--- a/DevForm/DevFormAz/DevFormAz/bin/DevFormAz.dll.config
+++ b/DevForm/DevFormAz/DevFormAz/bin/DevFormAz.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DevFormAz" connectionString="Data Source=.\sql2020;Initial Catalog=DevFormAz;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DevFormAz" connectionString="Data Source=Cacr7;Initial Catalog=DevFormAz;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
