--- a/DevForm/DevFormAz/DevFormAz/bin/DevFormAz.dll.config
+++ b/DevForm/DevFormAz/DevFormAz/bin/DevFormAz.dll.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DevFormAz" connectionString="Data Source=.\sqlserver2020;Initial Catalog=DevFormAz;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MyPushNotificationEntities" connectionString="metadata=res://*/MyPushNotification.csdl|res://*/MyPushNotification.ssdl|res://*/MyPushNotification.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlserver2020;initial catalog=MyPushNotification;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,7 +21,6 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -65,7 +65,5 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
-  
   </entityFramework>
- 
 </configuration>
